<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fondo_morado">



         <TextView
            android:layout_width="400dp"
            android:layout_height="70dp"
             android:layout_gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_menu1"
            android:textSize="48dp"
            android:textAlignment="center"
            android:id="@+id/text_menu"
            android:textColor="@color/blue_1"
            android:layout_marginTop="40dp"
            android:height="48dp"
             />

        <Button
            android:layout_width="300dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_menu2"
            android:id="@+id/btnjugar"
            android:background="#73a5f0"
            android:textColor="@color/primary_dark_material_dark" />


        <Button
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_menu3"
            android:onClick="ExitButton"
            android:id="@+id/button3"
            android:background="#73a5f0"
            android:textColor="@color/primary_dark_material_dark" />


</LinearLayout>