<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/madera_1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="textPersonName"
        android:text="Nombre Usuario"
        android:textColor="#4a5ce4"
        android:textSize="22dp"
        android:id="@+id/nombre"
        android:layout_gravity="right" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:id="@+id/imageView2"
        android:src="@drawable/testea"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="400dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/text_nivel1"
        android:id="@+id/button_1"
        android:background="@color/nivel_1"
        android:textColor="@color/primary_dark_material_dark" />

    <Button
        android:layout_width="400dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/text_nivel2"
        android:id="@+id/button_2"
        android:background="@color/nivel_2"
        android:textColor="@color/primary_dark_material_dark" />

    <Button
        android:layout_width="400dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/text_nivel3"
        android:id="@+id/button_3"
        android:background="@color/nivel_3"
        android:textColor="@color/primary_dark_material_dark" />


</LinearLayout>